# inetRadioFavs

./: Makefile.am  README.md  configure.ac
src/: DialogStations.cpp  DialogStations.h  MainApplication.cpp  MainApplication.h  MainWindow.cpp  MainWindow.h  SessionControl.cpp  SessionControl.h  UiToolLabel.cpp  UiToolLabel.h  UiToolVolumeButton.cpp  UiToolVolumeButton.h  VlcDBusInterface.cpp  VlcDBusInterface.h  VlcMediaPlayer2_proxy.h  file.cpp  file.h  iradiofavs.cpp  org.mpris.MediaPlayer2.vlc.xml  stations.cpp  stations.h  tracks.cpp  tracks.h  uidialognewstation.cpp  uidialognewstation.h  uidialognewstation.ui  uiexttreeview.cpp  uiexttreeview.h
